# CoralineBot

./: BitBoard.cpp  BitBoard.h  CMakeLists.txt  Move.h  MoveGeneration.h  Position.cpp  Position.h  ZobristHash.cpp  ZobristHash.h  bitboard_.cpp  bitboard_.h  evaluate.h  main.cpp  memory.cpp  memory.h  misc.cpp  misc.h  movegen.cpp  movegen.h  movepicker.cpp  movepicker.h  newBots.h  newRules1.h  position_.cpp  position_.h  search.h  tt.h  tune.h  types.h
